--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ h1, h2, .hero-title {
   height: 100%;
   background-color: white;
   color: black;
-  z-index: 1000;
+  z-index: 1001;
   transition: right 0.4s ease;
   box-shadow: -2px 0 8px rgba(0, 0, 0, 0.3);
   padding: 20px;
@@ -357,6 +357,24 @@ h1, h2, .hero-title {
   border: none;
   cursor: pointer;
 }
+
+#panel-backdrop {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  z-index: 1000;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+}
+
+#panel-backdrop.visible {
+  opacity: 1;
+  pointer-events: auto;
+}
+
 
 .side-content {
   margin-top: 60px;
