--- a/index.html
+++ b/index.html
@@ -597,6 +597,10 @@ closeBtn.addEventListener('click', function () {
 
 </script>
 
+<!-- Затемнение фона -->
+<div id="panel-backdrop"></div>
+
+<!-- Выезжающая панель -->
 <div id="side-panel">
   <button id="close-panel">&times;</button>
   <div class="side-content">
@@ -604,6 +608,7 @@ closeBtn.addEventListener('click', function () {
     <p>Aquí puedes descubrir más sobre nuestros servicios...</p>
   </div>
 </div>
+
 
 </body>
 </html>
