--- a/index.html
+++ b/index.html
@@ -584,26 +584,28 @@ h1, h2, .hero-title {
 
 
 
+  document.addEventListener("DOMContentLoaded", () => {
   const panel = document.getElementById('side-panel');
-const closeBtn = document.getElementById('close-panel');
-const backdrop = document.getElementById('panel-backdrop');
+  const closeBtn = document.getElementById('close-panel');
+  const backdrop = document.getElementById('panel-backdrop');
 
-document.querySelectorAll('.open-panel').forEach(btn => {
-  btn.addEventListener('click', function (e) {
-    e.preventDefault();
-    panel.classList.add('open');
-    backdrop.classList.add('visible');
+  document.querySelectorAll('.open-panel').forEach(btn => {
+    btn.addEventListener('click', function (e) {
+      e.preventDefault();
+      panel.classList.add('open');
+      backdrop.classList.add('visible');
+    });
   });
-});
 
-closeBtn.addEventListener('click', function () {
-  panel.classList.remove('open');
-  backdrop.classList.remove('visible');
-});
+  closeBtn.addEventListener('click', function () {
+    panel.classList.remove('open');
+    backdrop.classList.remove('visible');
+  });
 
-backdrop.addEventListener('click', function () {
-  panel.classList.remove('open');
-  backdrop.classList.remove('visible');
+  backdrop.addEventListener('click', function () {
+    panel.classList.remove('open');
+    backdrop.classList.remove('visible');
+  });
 });
 
  </script>
