--- a/index.html
+++ b/index.html
@@ -766,7 +766,31 @@ h1, h2, .hero-title {
 
 
 </section>
-<div class="spacer"></div>
+<section class="spacer-content">
+  <h2 class="spacer-title">Nuestra metodología</h2>
+  <div class="icon-line-wrapper">
+    <div class="icon-block">
+      <img src="img/icon1.svg" alt="Paso 1">
+      <span>Descubrimiento</span>
+    </div>
+    <div class="line"></div>
+    <div class="icon-block">
+      <img src="img/icon2.svg" alt="Paso 2">
+      <span>Diseño</span>
+    </div>
+    <div class="line"></div>
+    <div class="icon-block">
+      <img src="img/icon3.svg" alt="Paso 3">
+      <span>Entrega</span>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
 <section id="sec2">
   <video class="video-bg" autoplay muted loop playsinline poster="img/fallback8.jpg">
     <source src="img/screen8.mp4" type="video/mp4">
