--- a/index.html
+++ b/index.html
@@ -855,17 +855,17 @@ h1, h2, .hero-title {
     <h2 class="spacer-title">NUESTRA METODOLOGÍA</h2>
     <div class="icon-line-wrapper">
       <div class="icon-block">
-        <img src="img/icon1.svg" alt="Descubrimiento">
-        <span>DESCUBRIMIENTO</span>
+        <img src="img/icon1.png" alt="Branding">
+        <span>BRANDING</span>
       </div>
       <div class="line"></div>
       <div class="icon-block">
-        <img src="img/icon2.svg" alt="Diseño">
-        <span>DISEÑO</span>
+        <img src="img/icon2.png" alt="Diseño">
+        <span>CoNVERCIoN</span>
       </div>
       <div class="line"></div>
       <div class="icon-block">
-        <img src="img/icon3.svg" alt="Entrega">
+        <img src="img/icon3.png" alt="Entrega">
         <span>ENTREGA</span>
       </div>
     </div>
