--- a/index.html
+++ b/index.html
@@ -861,12 +861,12 @@ h1, h2, .hero-title {
       <div class="line"></div>
       <div class="icon-block">
         <img src="img/icon2.png" alt="Diseño">
-        <span>CoNVERCIoN</span>
+        <span>CONVERSIÓN</span>
       </div>
       <div class="line"></div>
       <div class="icon-block">
         <img src="img/icon3.png" alt="Entrega">
-        <span>ENTREGA</span>
+        <span> PAGOS ONLINE</span>
       </div>
     </div>
   </div>
