--- a/index.html
+++ b/index.html
@@ -717,6 +717,25 @@ h1, h2, .hero-title {
   }
 }
 
+.footnote {
+  font-family: 'Lato', sans-serif;
+  font-size: 0.55rem;
+  opacity: 0.6;
+  margin-top: 20px;
+  text-align: left;
+  margin-left: 5vw;
+  margin-right: 5vw;
+  max-width: 500px;
+  line-height: 1.3;
+}
+
+@media (max-width: 768px) {
+  .footnote {
+    font-size: 0.5rem;
+    margin-top: 16px;
+    max-width: 90vw;
+  }
+}
 
    
 
@@ -831,7 +850,7 @@ h1, h2, .hero-title {
 ">
 
     <h1 class="hero-title">
-      MARKETING CREATIVO, BRANDING, DISEÑO 3D Y PROMOCIÓN VISUAL
+      MARKETING CREATIVO, BRANDING*, DISEÑO 3D Y PROMOCIÓN VISUAL
     </h1>
 
 <p class="hero-subtitle">
@@ -842,6 +861,11 @@ h1, h2, .hero-title {
     <button class="cta-button open-panel">
   Descúbrelo
 </button>
+
+<p class="footnote">
+  * El precio del branding creativo comienza desde 370€ + IVA
+</p>
+
 
   </div>
 </div>
