--- a/index.html
+++ b/index.html
@@ -718,13 +718,13 @@ h1, h2, .hero-title {
 }
 
 .footnote {
+  position: absolute;
+  bottom: 5vh;
+  left: 5vw;
   font-family: 'Lato', sans-serif;
   font-size: 0.55rem;
   opacity: 0.6;
-  margin-top: 20px;
   text-align: left;
-  margin-left: 5vw;
-  margin-right: 5vw;
   max-width: 500px;
   line-height: 1.3;
 }
@@ -732,10 +732,11 @@ h1, h2, .hero-title {
 @media (max-width: 768px) {
   .footnote {
     font-size: 0.5rem;
-    margin-top: 16px;
+    bottom: 4vh;
     max-width: 90vw;
   }
 }
+
 
    
 
