--- a/index.html
+++ b/index.html
@@ -718,24 +718,23 @@ h1, h2, .hero-title {
 }
 
 .footnote {
-  position: absolute;
-  bottom: 5vh;
-  left: 5vw;
   font-family: 'Lato', sans-serif;
   font-size: 0.55rem;
   opacity: 0.6;
-  text-align: left;
+  margin-top: 18px;
   max-width: 500px;
   line-height: 1.3;
+  text-align: left;
 }
 
 @media (max-width: 768px) {
   .footnote {
     font-size: 0.5rem;
-    bottom: 4vh;
+    margin-top: 16px;
     max-width: 90vw;
   }
 }
+
 
 
    
