--- a/index.html
+++ b/index.html
@@ -717,23 +717,31 @@ h1, h2, .hero-title {
   }
 }
 
+.text-wrapper {
+  position: relative; /* Обязательно! */
+}
+
 .footnote {
+  position: absolute;
+  bottom: 4vh;
+  left: 0;
   font-family: 'Lato', sans-serif;
-  font-size: 0.55rem;
+  font-size: 0.5rem;
   opacity: 0.6;
-  margin-top: 18px;
-  max-width: 500px;
-  line-height: 1.3;
-  text-align: left;
+  line-height: 1.2;
+  margin-left: 0;
+  padding-left: 0;
+  max-width: 80vw;
 }
 
 @media (max-width: 768px) {
   .footnote {
-    font-size: 0.5rem;
-    margin-top: 16px;
+    font-size: 0.45rem;
+    bottom: 3vh;
     max-width: 90vw;
   }
 }
+
 
 
 
