--- a/index.html
+++ b/index.html
@@ -875,8 +875,14 @@ h1, h2, .hero-title {
 
   </div>
   <p class="footnote">
-  * El precio del branding creativo comienza desde 370€ + IVA
+  * El precio del branding creativo comienza desde 370 € + IVA. 
+  Consulta condiciones en el <a href="#modal-oferta" class="open-oferta">Contrato de Oferta Pública</a>.
 </p>
+<p class="footnote">
+  * El proyecto de conversión (Landing → Instagram → Facebook → Google Ads → Pago vía PayPal) 
+  comienza desde <strong>890 €</strong>.
+</p>
+
 </div>
 
 
