--- a/index.html
+++ b/index.html
@@ -855,35 +855,28 @@ h1, h2, .hero-title {
   text-align: left;
   max-width: 90vw;
   margin-top: 12vh;
+  position: relative; /* обязательно для .footnote */
 ">
+  <h1 class="hero-title">
+    MARKETING CREATIVO, BRANDING*, DISEÑO 3D Y PROMOCIÓN VISUAL
+  </h1>
 
-    <h1 class="hero-title">
-      MARKETING CREATIVO, BRANDING*, DISEÑO 3D Y PROMOCIÓN VISUAL
-    </h1>
+  <p class="hero-subtitle">
+    <span id="rotating-text" class="fade">LANZAMOS TU MARCA CON EXPERIENCIAS INMERSIVAS E IMPACTO REAL</span>
+  </p>
 
-<p class="hero-subtitle">
-  <span id="rotating-text" class="fade">LANZAMOS TU MARCA CON EXPERIENCIAS INMERSIVAS E IMPACTO REAL</span>
-</p>
-    
+  <button class="cta-button open-panel">Descúbrelo</button>
 
-    <button class="cta-button open-panel">
-  Descúbrelo
-</button>
-
-
-
-
-  </div>
+  <!-- Сноски -->
   <p class="footnote">
-  * El precio del branding creativo comienza desde 370 € + IVA. 
-  Consulta condiciones en el <a href="#modal-oferta" class="open-oferta">Contrato de Oferta Pública</a>.
-</p>
-<p class="footnote">
-  * El proyecto de conversión (Landing → Instagram → Facebook → Google Ads → Pago vía PayPal) 
-  comienza desde <strong>890 €</strong>.
-</p>
-
+    * El precio del branding creativo comienza desde 370 € + IVA.
+  </p>
+  <p class="footnote">
+    * Proyecto de conversión (Landing → Instagram → Facebook → Google Ads → Pago vía PayPal) desde <strong>890 €</strong>. Consulta condiciones en el 
+    <a href="#modal-oferta" class="open-oferta">Contrato de Oferta Pública</a>.
+  </p>
 </div>
+
 
 
 
