--- a/index.html
+++ b/index.html
@@ -719,25 +719,31 @@ h1, h2, .hero-title {
 .footnote {
   font-family: 'Lato', sans-serif;
   font-size: 0.5rem;
-  opacity: 0.6;
-  line-height: 1.4;
-  max-width: 80vw;
-  margin-top: 1.2rem;
+  opacity: 0.65;
+  line-height: 1.5;
+  max-width: 85vw;
+  margin-top: 1rem;
   white-space: normal;
   word-break: break-word;
 }
 
+.footnote a {
+  color: #beecf1; /* или #00c0ff */
+  text-decoration: underline;
+  font-weight: 500;
+}
+
 .footnote + .footnote {
-  margin-top: 0.4rem;
+  margin-top: 0.5rem;
 }
 
 @media (max-width: 768px) {
   .footnote {
     font-size: 0.45rem;
     max-width: 90vw;
-    margin-top: 1rem;
   }
 }
+
 
 
    
