--- a/index.html
+++ b/index.html
@@ -712,11 +712,7 @@ h1, h2, .hero-title {
     font-size: 0.65rem;
   }
 
- .text-wrapper {
-  position: relative; /* Можно оставить, но больше не обязательно */
-}
-
-.footnote {
+ .footnote {
   font-family: 'Lato', sans-serif;
   font-size: 0.5rem;
   opacity: 0.65;
@@ -728,7 +724,7 @@ h1, h2, .hero-title {
 }
 
 .footnote a {
-  color: #beecf1; /* или #00c0ff */
+  color: #66ccff; /* или #00c0ff */
   text-decoration: underline;
   font-weight: 500;
 }
