--- a/index.html
+++ b/index.html
@@ -876,9 +876,10 @@ h1, h2, .hero-title {
 
   <div id="lang-toggle">EN</div>
   <section id="hero">
-    <video class="video-bg" autoplay muted loop>
-      <source src="img/screen7.mp4" type="video/mp4">
-    </video>
+    <video class="video-bg" autoplay muted loop playsinline>
+  <source src="img/screen7.mp4" type="video/mp4">
+</video>
+
     <div class="overlay"></div>
     <div class="content">
   <!-- Логотип отдельно, с отступом сверху -->
