--- a/index.html
+++ b/index.html
@@ -782,6 +782,18 @@ h1, h2, .hero-title {
   cursor: pointer;
 }
 
+.footnote,
+.footnote a,
+.modal-content,
+.modal-content p,
+.modal-content h2,
+.cookie-banner,
+.cookie-buttons button,
+.cookie-option,
+.modal-scroll,
+.side-content {
+  font-family: 'Lato', sans-serif !important;
+}
 
    
 
